--- a/Python_notebook/instruction code.ipynb
+++ b/Python_notebook/instruction code.ipynb
@@ -18,7 +18,7 @@
     "tags": []
    },
    "source": [
-    "This notebook explores the GLOBEL_PUBLIC_HEALTH_DATASET `.csv` file from 183 counteries and 5 official WHO region using the Pandas package in Python3. Through the apply different functions in the Pandas package, target subsets could be selected and exported as `.csv.` file for further research. In this example, the filtered data could be used to examine factors that influence the total population.\n",
+    "This notebook explores the GLOBEL_PUBLIC_HEALTH_DATASET `.csv` file from 183 counteries and 5 official WHO region using the Pandas package in Python3. Through applying different functions in the Pandas package, target subsets could be selected and exported as `.csv.` file for further research. In this example, the filtered data could be used to examine factors that influence the total population.\n",
     "\n",
     "### Step overview\n",
     "**Application required: Anaconda (installation process included in step 1)**\n",
