--- a/Python_notebook/instruction code.ipynb
+++ b/Python_notebook/instruction code.ipynb
@@ -98,8 +98,8 @@
    "metadata": {},
    "source": [
     "### STEP 4: Filter out target data using Pandas functions\n",
-    "- In this notebook, the goal is to generate a subset `.csv` file that includes column \"**Name**\",\"**Total population**\",\"**Healthy life expectancy at birthb (years)**\", \"**Life expectancy**\" and \"**Maternal mortality ratioc (per 100 000 live births)**\" for countries with Maternal mortality ratioc (per 100 000 live births) less than **10** and life expectancy **over 80**.\n",
-    "- To start with, we first use the function `<Dataframe name>.dtypes` to determine the data type for each column. Only when the data types are `int` or `float` could we filter with data over **10** or **80**.\n",
+    "- In this notebook, the goal is to generate a subset `.csv` file that includes column \"**Name**\",\"**Total population**\",\"**Healthy life expectancy at birthb (years)**\", \"**Life expectancy**\" and \"**Maternal mortality ratioc (per 100 000 live births)**\" for countries with Maternal mortality ratioc (per 100 000 live births) less than **14** and life expectancy **over 73.3**.\n",
+    "- To start with, we first use the function `<Dataframe name>.dtypes` to determine the data type for each column. Only when the data types are `int` or `float` could we filter with data less than **14** or **73.3**.\n",
     "  Note: in this example, the `<Dataframe name>` would be `raw_data`."
    ]
   },
@@ -146,7 +146,7 @@
     "tags": []
    },
    "source": [
-    "- Since the datatype of all three target columns is `float64`,the next step would be to filter out the \"**Life expectancy at birthb (year)**\"  with data over **80** (>= 80).\n",
+    "- Since the datatype of all three target columns is `float64`,the next step would be to filter out the \"**Life expectancy at birthb (year)**\"  with data over **73.3** (>= 73.3).\n",
     "- Funtion `<Dataframe name>.loc[]` is a frequently used function for indexing large data frame. Specific name for column and number of row could be input in the brackets to select rows and columns.  \n",
     "  In the example below, raw_data[\"Life expectancy at birthb (years)\"] indictes only the column named \"Life expectancy at birthb (years)\""
    ]
@@ -1128,7 +1128,7 @@
     "tags": []
    },
    "source": [
-    "- Similarly, we would filter out the \"**Maternal mortality ratioc (per 100 000 live births)**\" with data less than **10** and name the new `<Dataframe name>`: `subset_maternalmortality`."
+    "- Similarly, we would filter out the \"**Maternal mortality ratioc (per 100 000 live births)**\" with data less than **14** and name the new `<Dataframe name>`: `subset_maternalmortality`."
    ]
   },
   {
